--- a/app/src/main/res/layout/whisky_search_layout.xml
+++ b/app/src/main/res/layout/whisky_search_layout.xml
@@ -8,7 +8,7 @@
     android:paddingRight="16dp"
     android:paddingTop="16dp">
 
-    <android.support.v7.widget.SearchView
+    <androidx.appcompat.widget.SearchView
         android:id="@+id/whisky_search_search_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
@@ -20,7 +20,7 @@
         android:layout_centerInParent="true"
         android:visibility="gone" />
 
-    <android.support.v7.widget.RecyclerView
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/whisky_search_recycler_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
